--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -66,7 +66,7 @@
     display: block;
     width: 100%;
     height: 3px;
-    background-color: #ffffff;
+    background-color: var(--cor-neutra-clara);
 }
 
 .botao-carrinho {
