--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -104,12 +104,32 @@
     .cabecalho .menu-principal ul {
         flex-direction: row;
     }
+
+    .menu-hamburguer {
+        display: none;
+    }
+
+    .cabecalho .menu-principal ul {
+        gap: 1rem;
+    }
+
+    .cabecalho ul li a {
+        font-size: 0.85rem;
+    }
 }
 
-@media (max-width: 1440px) {
+@media (max-width: 1170px) {
     .cabecalho {
-        max-width: 1440px;
+        max-width: 1170px;
         margin: 0 auto;
+    }
+
+     .cabecalho .menu-principal ul {
+        gap: 2rem;
+    }
+
+    .cabecalho ul li a {
+        font-size: 1rem;
     }
     
 }
